Bug 1509408 - Part 1. Improve memory reporting for animated discard and recycle queues.